<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="comment"
            type="com.example.android.sparkstories.model.comment.Comment" />

        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.comments.CommentsViewModel" />

        <variable
            name="listAdapter"
            type="com.example.android.sparkstories.ui.comments.CommentAdapter" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="@dimen/margin_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_regular">

            <ImageButton
                android:id="@+id/reply_comment_button"
                style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                android:stateListAnimator="@animator/top_menu_button_state"
                android:backgroundTint="@android:color/white"
                android:nestedScrollingEnabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onClickNewComment(comment.id)}"
                app:layout_constraintRight_toLeftOf="@id/like_comment_button"
                app:layout_constraintEnd_toStartOf="@id/like_comment_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/first_row"
                app:srcCompat="@drawable/ic_action_reply" />

            <ImageButton
                android:id="@+id/like_comment_button"
                style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                android:stateListAnimator="@animator/top_menu_button_state"
                android:backgroundTint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onClickLikeComment(comment)}"
                app:layout_constraintRight_toLeftOf="@id/comment_rating"
                app:layout_constraintEnd_toStartOf="@id/comment_rating"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/first_row"
                app:srcCompat="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:id="@+id/comment_rating"
                style="@style/Theme.WriteItSayItHearIt.CardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginRight="@dimen/margin_regular"
                android:text="@{Integer.toString(comment.rating)}"
                android:textSize="@dimen/text_size_rating"
                app:layout_constraintBottom_toTopOf="@id/first_row"
                app:layout_constraintEnd_toStartOf="@id/comment_datetime"
                app:layout_constraintRight_toLeftOf="@id/comment_datetime"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="23" />

            <include
                android:id="@+id/comment_datetime"
                layout="@layout/date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:datable="@{comment}"
                app:layout_constraintBottom_toTopOf="@id/first_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/first_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="comment_rating, comment_datetime" />


            <TextView
                android:id="@+id/comment_author"
                style="@style/Theme.WriteItSayItHearIt.CardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{comment.author}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_row"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/comment_text"
                style="@style/Theme.WriteItSayItHearIt.CardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@{comment.text}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comment_author"
                tools:text="It was the best of times. It was the worst of times." />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/child_comments_list"
                android:adapter="@{listAdapter}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/black_border"
                app:layout_constraintTop_toBottomOf="@+id/comment_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layoutManager="com.example.android.sparkstories.views.NestedScrollingLinearLayoutManager"
                tools:listItem="@layout/story_list_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
