<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.android.sparkstories.binding.Converter" />

        <variable
            name="hasResults"
            type="boolean" />

        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.cues.CuesViewModel" />

        <variable
            name="listAdapter"
            type="com.example.android.sparkstories.ui.cues.CueAdapter" />

        <variable
            name="isLoading"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/queues_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/table_top_port"
        tools:context=".ui.cues.CuesFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_cues_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.WriteItSayItHearIt.FilterTextInputLayout"
            app:layout_constraintBottom_toTopOf="@id/progress_bar_cues"
            app:layout_constraintEnd_toStartOf="@id/sort_order_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sort_order_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_cues_edit_text"
                android:text="@={viewmodel.queryParameters.filterString}"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_cues"
                android:theme="@style/Theme.WriteItSayItHearIt.FilterEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sort_order_spinner"
            app:entries="@{@stringArray/sort_order}"
            app:onItemSelected="@{(selection) -> viewmodel.queryParameters.setSortOrder(Converter.toSortOrder(selection)) }"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/progress_bar_cues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/filter_cues_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/filter_cues_layout"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar_cues"
            visibleGone="@{isLoading}"
            style="?android:attr/progressBarStyleHorizontal"
            android:orientation="horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondaryDarkColor"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/filter_cues_layout"
            app:layout_constraintBottom_toTopOf="@id/cues_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cues_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{listAdapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar_cues"
            tools:listItem="@layout/cue_list_item" />

        <TextView
            android:id="@+id/no_results"
            style="@style/Theme.WriteItSayItHearIt.NoResultsFoundStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{!hasResults}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_cue_fab"
            android:onClick="@{() -> viewmodel.onClickNewCue()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
